add filter team to event